--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="header">
         <h1>My form</h1>
+        <p>Image by <a href="https://unsplash.com/@vmxhu">Szabo Viktor</a> on <a href="https://unsplash.com/@vmxhu">Unsplash</a></p>
     </div>
 
     <div class="content">
@@ -58,7 +59,7 @@
         </form>
 
         <div class="footer">
-            <p>or sign in here.</p>
+            <p>...or sign in <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">here</a>.</p>
         </div>
 
     </div>
