--- a/index.html
+++ b/index.html
@@ -23,32 +23,24 @@
         <form action="post">
 
             <div class="popout">
-                <div class="item">
+                <div class="arow">
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" />
-                </div>
-                
-                <div class="item">
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" />
-                </div>
-                
-                <div class="item">
+
                     <label for="email">Email address</label>
                     <input type="email" id="email" />
-                </div>
 
-                <div class="item">
-                    <label for="number">Phone Number</label>
-                    <input type="text" id="number" />
-                </div>
-
-                <div class="item">
                     <label for="pwd">Password</label>
                     <input type="password" id="pwd" />
                 </div>
 
-                <div class="item">
+                <div class="brow">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" />
+
+                    <label for="number">Phone Number</label>
+                    <input type="text" id="number" />
+
                     <label for="confirm">Confirm Password</label>
                     <input type="password" id="confirm" />
                 </div>
